force-app/main/default/objects/Attendee__c/fields/Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>