force-app/main/default/objects/Attendee__c/fields/Registered_Event__c.field-meta.xml
<CustomField>
    <fullName>Registered_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>