force-app/main/default/objects/Attendee__c/fields/Selected_Session__c.field-meta.xml
<CustomField>
    <fullName>Selected_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>